--- a/app/views/cars/autotech.html.erb
+++ b/app/views/cars/autotech.html.erb
@@ -88,8 +88,8 @@ $(document).ready(function() {
 					<td></td>
 					<td><%= link_to "#{item[:marca_gnum]}",:controller => :tehservices, :action => :index ,:car_id => item[:car_id] %></td>
 					<td><%= item[:parcurs][:parcurs] %> <%= item[:parcurs][:wdate] ? "(#{item[:parcurs][:wdate]})" : '' %></td>
-					<td class=<%= if item[:to][:tored] then "danger" end %>><%= item[:to][:parcurs] %> <%= item[:to][:maxtosdate] ? "(#{item[:to][:maxtosdate]})" : '' %></td>
-					<td class=<%= if item[:oil][:oilred] then "danger" end %>><%= item[:oil][:parcurs] %> <%= item[:oil][:maxoilsdate] ? "(#{ item[:oil][:maxoilsdate]})" : '' %></td>	
+					<td class=<%= if item[:to][:tored] then "danger" end %>><%= item[:to][:parcurs] %> <%= item[:to][:maxtosdate] ? "(#{item[:to][:maxtosdate]})" : '' %> <%= item[:dtto] ? "(#{item[:dtto]})" : '' %></td>
+					<td class=<%= if item[:oil][:oilred] then "danger" end %>><%= item[:oil][:parcurs] %> <%= item[:oil][:maxoilsdate] ? "(#{ item[:oil][:maxoilsdate]})" : '' %> <%= item[:dtoil] ? "(#{item[:dtoil]})" : '' %></td>	
 					<td class=<%= if item[:asig][:asigred] then "danger" end %>><%= item[:asig][:asigdt] %> <%= item[:asig][:maxasigsdate] ? "(#{ item[:asig][:maxasigsdate]})" : '' %></td>
 					<td class=<%= if item[:tosm][:tosmred] then "danger" end %>><%= item[:tosm][:tosmdt] %> <%= item[:tosm][:maxtosmsdate] ? "(#{  item[:tosm][:maxtosmsdate]})" : '' %></td>					
 					<td><%= number_to_currency(item[:monthsprice],:unit=>'€') %></td>
