--- a/app/views/cars/smonth.html.erb
+++ b/app/views/cars/smonth.html.erb
@@ -12,7 +12,8 @@
 	<% if @broni_today.count != 0 then %>	
 		<h4 style="color: blue" align="center"><span class="glyphicon glyphicon-flag" aria-hidden="true"></span> Брони в работу на сегодня</h4>
 		<table id="b1" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">
-			<thead>
+		    <% 2.times do |i| %>	
+		        <% if i==0 then %><thead><% else %><tfoot><% end %>
 				<tr class="info">
 					<th style="width:3%"></th>
 					<th style="width:2%" class="all"></th>
@@ -28,24 +29,8 @@
 					<th>Гар. сумма</th>
 					<!--<th class="none">Цена, <% if $valuta.upcase=='EUR' then %>&euro;<% else %><%= "#{$valuta}" %><% end %></th>-->
 				</tr>
-			</thead>
-			<tfoot>
-				<tr class="info">
-					<th style="width:3%"></th>
-					<th style="width:2%" class="all"></th>
-					<th class="all" style="width:3%">No</th>
-					<th class="all"></th>
-					<th class="all">От</th>
-					<th class="all">Автомобиль</th>
-					<th>Клиент</th>
-					<!-- <th class="none">Агент</th>	-->
-				    <th>С даты</th>
-				    <th>По дату</th>
-				    <th>На срок</th>
-					<th>Гар. сумма</th>
-					<!--<th class="none">Цена, <% if $valuta.upcase=='EUR' then %>&euro;<% else %><%= "#{$valuta}" %><% end %></th>-->
-				</tr>
-			</tfoot>			
+		       <% if i==0 then %></thead><% else %></tfoot><% end %>
+		   <% end %>			
 			<tbody>			
 				<% @broni_today.each do |contract| %>
 						<tr>
@@ -53,7 +38,7 @@
 							<td></td>
 							<td><%= link_to(("#{contract.id}" + if contract.cnum!='' then "/#{contract.cnum} " else " " end),  contract_path(contract)) %></td>
 							<td><%= link_to("Контракт",  contracts_broni2contract_path(:id => contract.id), class: "btn btn-info btn-xs") %></td>
-							<td><%= contract.stdate.strftime('%d.%m.%Y') %></td>
+							<td><%= "#{contract.stdate.strftime('%d.%m.%Y')}" %> <b><%= contract.stdate.strftime('%R') %></b></td>
 							<td><% unless contract.car.nil? then %><%= link_to "#{contract.car.marca} #{contract.car.gnum}" , cars_show_path(:id => contract.car.id),:method => :get, :title => 'Посмотреть авто' %><% end %></td>
 							<td><% unless contract.client.nil? then %><%= link_to "#{contract.client.sname} #{contract.client.name} #{contract.client.fname} #{contract.client.tel} #{contract.client.pemail}" , edit_client_path(contract.client),:method => :get, :title => 'Редактировать клиента' %><% end %></td>
 							<!-- <td><%= if contract.user then "#{contract.user.username}" end %></td>	-->
@@ -73,7 +58,8 @@
     <% if @broni_tomorrow.count != 0 then %>	
 		<h4 style="color: blue" align="center"><span class="glyphicon glyphicon-flag" aria-hidden="true"></span> Брони в работу на завтра</h4>
 		<table id="b2" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">
-			<thead>
+		    <% 2.times do |i| %>	
+		        <% if i==0 then %><thead><% else %><tfoot><% end %>
 				<tr class="info">
 					<th style="width:3%"></th>
 					<th style="width:2%" class="all"></th>
@@ -89,24 +75,8 @@
 					<th>Гар. сумма</th>
 					<!--<th class="none">Цена, <% if $valuta.upcase=='EUR' then %>&euro;<% else %><%= "#{$valuta}" %><% end %></th>-->
 				</tr>
-			</thead>
-			<tfoot>
-				<tr class="info">
-					<th style="width:3%"></th>
-					<th style="width:2%" class="all"></th>
-					<th class="all" style="width:3%">No</th>
-					<th class="all"></th>
-					<th class="all">От</th>
-					<th class="all">Автомобиль</th>
-					<th>Клиент</th>
-					<!-- <th class="none">Агент</th>	-->
-				    <th>С даты</th>
-				    <th>По дату</th>
-				    <th>На срок</th>
-					<th>Гар. сумма</th>
-					<!--<th class="none">Цена, <% if $valuta.upcase=='EUR' then %>&euro;<% else %><%= "#{$valuta}" %><% end %></th>-->
-				</tr>
-			</tfoot>
+		       <% if i==0 then %></thead><% else %></tfoot><% end %>
+		   <% end %>
 			<tbody>			
 				<% @broni_tomorrow.each do |contract| %>
 						<tr>
@@ -114,7 +84,7 @@
 							<td></td>
 							<td><%= link_to(("#{contract.id}" + if contract.cnum!='' then "/#{contract.cnum} " else " " end),  contract_path(contract)) %></td>
 							<td><%= link_to("Контракт",  contracts_broni2contract_path(:id => contract.id), class: "btn btn-info btn-xs") %></td>
-							<td><%= contract.stdate.strftime('%d.%m.%Y') %></td>
+							<td><%= contract.stdate.strftime('%d.%m.%Y') %> <b><%= contract.stdate.strftime('%R') %></b></td>
 							<td><% unless contract.car.nil? then %><%= link_to "#{contract.car.marca} #{contract.car.gnum}" , cars_show_path(:id => contract.car.id),:method => :get, :title => 'Посмотреть авто' %><% end %></td>
 							<td><% unless contract.client.nil? then %><%= link_to "#{contract.client.sname} #{contract.client.name} #{contract.client.fname} #{contract.client.tel} #{contract.client.pemail}" , edit_client_path(contract.client),:method => :get, :title => 'Редактировать клиента' %><% end %></td>
 							<!-- <td><%= if contract.user then "#{contract.user.username}" end %></td>	-->
@@ -134,13 +104,14 @@
 	<% if @contracts_close_today.count != 0 then %>	
 		<h4 style="color: blue" align="center"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Контракты к закрытию на сегодня</h4>
 		<table id="b3" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">
-			<thead>
+		    <% 2.times do |i| %>	
+		        <% if i==0 then %><thead><% else %><tfoot><% end %>
 				<tr class="info">
 					<th style="width:3%"></th>
 					<th style="width:2%" class="all"></th>
 					<th class="all" style="width:3%">No</th>
 					<th class="all"></th>
-					<th class="all">От</th>
+					<th class="all">По</th>
 					<th class="all">Автомобиль</th>
 					<th>Клиент</th>
 					<!-- <th>Агент</th>	-->
@@ -149,23 +120,8 @@
 				    <th>На срок</th>
 				    <th>Залог</th>
 				</tr>
-			</thead>
-			<tfoot>
-				<tr class="info">
-					<th style="width:3%"></th>
-					<th style="width:2%" class="all"></th>
-					<th class="all" style="width:3%">No</th>
-					<th class="all"></th>
-					<th class="all">От</th>
-					<th class="all">Автомобиль</th>
-					<th>Клиент</th>
-					<!-- <th>Агент</th>	-->
-				    <th>С даты</th>
-				    <th>По дату</th>
-				    <th>На срок</th>
-				    <th>Залог</th>
-				</tr>
-			</tfoot>			
+		       <% if i==0 then %></thead><% else %></tfoot><% end %>
+		   <% end %>			
 			<tbody>
 				<% @contracts_close_today.each do |contract| %>
 					    <tr>
@@ -173,7 +129,7 @@
 					    	<td></td>
 							<td><%= link_to(("#{contract.id}" + if contract.cnum!='' then "/#{contract.cnum} " else " " end),  contract_path(contract)) %></td>
 							<td><%= link_to("Закрыть",  contracts_contract2arh_path(:id => contract.id), class: "btn btn-info btn-xs") %></td>
-							<td><%= contract.stdate.strftime('%d.%m.%Y') %></td>	
+							<td><%= contract.enddate.strftime('%d.%m.%Y') %> <b><%= contract.enddate.strftime('%R') %></b></td>	
 							<td><% unless contract.car.nil? then %><%= link_to "#{contract.car.marca} #{contract.car.gnum}" , cars_show_path(:id => contract.car.id),:method => :get, :title => 'Посмотреть авто' %><% end %></td>
 							<td><% unless contract.client.nil? then %><%= link_to "#{contract.client.sname} #{contract.client.name} #{contract.client.fname} #{contract.client.tel} #{contract.client.pemail}" , edit_client_path(contract.client),:method => :get, :title => 'Редактировать клиента' %><% end %></td>
 							<!-- <td><%= if contract.user then "#{contract.user.username}" end %></td>	-->
@@ -305,53 +261,7 @@
 <script>
 $(document).ready(function() {
     var t = $('#b1').DataTable( {
-        "order": [[ 2, "asc" ],[ 4, "asc" ]],
-        "language": {
-            "lengthMenu": "Отображать _MENU_ строк на странице",
-            "zeroRecords": "Ничего не найдено - увы...",
-            "info": "Страница _PAGE_ из _PAGES_",
-            "infoEmpty": "Нет доступных строк",
-            "infoFiltered": "(Отфильтровано из _MAX_ строк)",
-            "search": "Поиск",
-             paginate: {
-                first:      "<<",
-                previous:   "<",
-                next:       ">",
-                last:       ">>"
-            }
-        },
-        paging:         false,
-        searching:         false,
-        info:           false,  
-         responsive: {
-            details: {
-                type: 'column'
-            }
-        },
-        columnDefs: [ {
-            className: 'control',
-            orderable: false,
-            targets:   0
-            }, {
-            "searchable": false,
-            "orderable": false,
-            "targets": [1,3]
-            },
-         { type: 'de_datetime', targets: [7,8] },
-         { type: 'de_date', targets: 4 }
-         ]  
-    } ); 
-    
-    
-    
-    t.on( 'order.dt search.dt', function () {
-        t.column(1, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
-            cell.innerHTML = i+1;
-        } );
-    } ).draw();       
-   
-    var t = $('#b3').DataTable( {
-        "order": [[ 2, "asc" ],[ 4, "asc" ]],
+        "order": [[ 7, "asc" ]],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -381,10 +291,54 @@ $(document).ready(function() {
             }, {
             "searchable": false,
             "orderable": false,
-            "targets": [1,3]
+            "targets": [1,3,4]
             },
-         { type: 'de_datetime', targets: [7,8] },
-         { type: 'de_date', targets: 4 }
+         { type: 'de_datetime', targets: [7,8] }
+         ]  
+    } ); 
+    
+    
+    
+    t.on( 'order.dt search.dt', function () {
+        t.column(1, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+            cell.innerHTML = i+1;
+        } );
+    } ).draw();       
+   
+    var t = $('#b3').DataTable( {
+        "order": [[ 8, "asc" ]],
+        "language": {
+            "lengthMenu": "Отображать _MENU_ строк на странице",
+            "zeroRecords": "Ничего не найдено - увы...",
+            "info": "Страница _PAGE_ из _PAGES_",
+            "infoEmpty": "Нет доступных строк",
+            "infoFiltered": "(Отфильтровано из _MAX_ строк)",
+            "search": "Поиск",
+             paginate: {
+                first:      "<<",
+                previous:   "<",
+                next:       ">",
+                last:       ">>"
+            }
+        },
+        paging:         false,
+        searching:      false,
+        info:           false,  
+         responsive: {
+            details: {
+                type: 'column'
+            }
+        },
+        columnDefs: [ {
+            className: 'control',
+            orderable: false,
+            targets:   0
+            }, {
+            "searchable": false,
+            "orderable": false,
+            "targets": [1,3,4]
+            },
+         { type: 'de_datetime', targets: [7,8] }
          ]      
     } ); 
 
@@ -426,7 +380,7 @@ $(document).ready(function() {
     } ).draw();  
 
     var t = $('#b2').DataTable( {
-        "order": [[ 2, "asc" ],[ 4, "asc" ]],
+        "order": [[ 7, "asc" ]],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -456,10 +410,9 @@ $(document).ready(function() {
             }, {
             "searchable": false,
             "orderable": false,
-            "targets": [1,3]
+            "targets": [1,3,4]
             },
-         { type: 'de_datetime', targets: [7,8] },
-         { type: 'de_date', targets: 4 }
+         { type: 'de_datetime', targets: [7,8] }
          ]  
     } ); 
         
